--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,144 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_margin="16dp"
     android:id="@+id/cardView">
 
-    <LinearLayout
-        android:layout_width="356dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="6dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+        android:padding="16dp">
 
-        <LinearLayout
+        <!-- Title Label -->
+        <TextView
+            android:id="@+id/labelTitle"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="@string/TiTle"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- Title Value -->
+
+        <!-- Checkbox for marking as paid -->
+
+        <CheckBox
+            android:id="@+id/imgCheckBoxItems"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:text="@string/paid"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/textviewTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/textviewTitle" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/TiTle"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Arya"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Category Label -->
+        <TextView
+            android:id="@+id/labelCategory"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/CaTegory"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelTitle" />
 
+        <!-- Category Value -->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/CaTegory"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewCategory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="Education"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Amount Label -->
+        <TextView
+            android:id="@+id/labelAmount"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal" />
+            android:layout_marginTop="8dp"
+            android:text="@string/aMount"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelCategory" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <!-- Amount Value -->
+
+        <!-- Purchase Date Label -->
+        <TextView
+            android:id="@+id/textviewAmount"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="$1200"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+
+            app:layout_constraintStart_toEndOf="@id/labelAmount"
+            app:layout_constraintStart_toStartOf="@+id/textviewDate"
+            app:layout_constraintTop_toTopOf="@id/labelAmount" />
+
+        <TextView
+            android:id="@+id/textviewTitle"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="4dp"
+            android:text="Arya"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelTitle"
+            app:layout_constraintStart_toStartOf="@+id/textviewCategory"
+            app:layout_constraintTop_toTopOf="@id/labelTitle"
+            app:layout_constraintWidth_default="wrap" />
+
+        <TextView
+            android:id="@+id/textviewCategory"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:text="Education"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/labelCategory"
+            app:layout_constraintStart_toStartOf="@+id/textviewAmount"
+            app:layout_constraintTop_toTopOf="@id/labelCategory" />
+
+        <TextView
+            android:id="@+id/textviewDate"
+            android:layout_width="120dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="12dp"
+            android:text="1/6/2024"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/labelDate"
+            app:layout_constraintTop_toTopOf="@id/labelDate" />
+
+        <TextView
+            android:id="@+id/labelDate"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginTop="8dp"
+            android:text="@string/purchase_Date"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/labelAmount" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/aMount"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="$1200"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/purchase_Date"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textviewDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="1/6/2024"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-
+        <!-- Purchase Date Value -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
