--- a/app/src/main/res/layout/activity_my_spendings.xml
+++ b/app/src/main/res/layout/activity_my_spendings.xml
@@ -35,7 +35,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/essential"
+                android:text="@string/Essential"
                 android:textSize="10sp"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/non_essential"
+                android:text="@string/Non_essential"
                 android:textSize="10sp"
                 app:layout_constraintTop_toBottomOf="@+id/materialToolbarSpendings"
                 app:layout_constraintStart_toEndOf="@+id/btnEssential"
